--- a/src/Log.It.With.NLog/Log.It.With.NLog.csproj
+++ b/src/Log.It.With.NLog/Log.It.With.NLog.csproj
@@ -34,7 +34,7 @@
       <HintPath>..\..\packages\Log.It.1.0.0\lib\net462\Log.It.dll</HintPath>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.4.9\lib\net45\NLog.dll</HintPath>
+      <HintPath>..\..\packages\NLog.4.0.0\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
