--- a/tests/Log.It.With.NLog.Tests/Log.It.With.NLog.Tests.csproj
+++ b/tests/Log.It.With.NLog.Tests/Log.It.With.NLog.Tests.csproj
@@ -33,8 +33,8 @@
     <Reference Include="FakeItEasy, Version=3.3.2.0, Culture=neutral, PublicKeyToken=eff28e2146d5fd2c, processorArchitecture=MSIL">
       <HintPath>..\..\packages\FakeItEasy.3.3.2\lib\net40\FakeItEasy.dll</HintPath>
     </Reference>
-    <Reference Include="Log.It, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Log.It.1.0.0\lib\net462\Log.It.dll</HintPath>
+    <Reference Include="Log.It, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Log.It.1.1.0\lib\netstandard2.0\Log.It.dll</HintPath>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NLog.4.0.0\lib\net45\NLog.dll</HintPath>
@@ -50,6 +50,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.ConfigurationManager, Version=4.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Configuration.ConfigurationManager.4.4.1\lib\net461\System.Configuration.ConfigurationManager.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -78,10 +81,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IWrite.cs" />
+    <Compile Include="When_outputting_logs_to_xunit_using_the_nlog_capturer.cs" />
     <Compile Include="When_rendering_using_the_log_context_layout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestTarget.cs" />
-    <Compile Include="XUnit2Target.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
