--- a/tests/Log.It.With.NLog.Tests/app.config
+++ b/tests/Log.It.With.NLog.Tests/app.config
@@ -2,8 +2,10 @@
 <configuration>
   <configSections>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+    <section name="Logging" type="Log.It.LoggingSection, Log.It" />
   </configSections>
-   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <Logging Factory="Log.It.With.NLog.NLogLoggerFactory, Log.It.With.NLog" />
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <extensions>
       <add assembly="Log.It.With.NLog.Tests" />
       <add assembly="Log.It.With.NLog" />
@@ -12,10 +14,10 @@
     <targets>
       <target name="TestWriter" xsi:type="Test" layout="${Layout}" />
       <target name="Debugger" xsi:type="Debugger" layout="${Layout}" />
-      <target name="XUnit2" xsi:type="XUnit2" layout="${Layout}" />
+      <target name="NLogCapturing" xsi:type="NLogCapturing" layout="${message}" />
     </targets>
     <rules>
-      <logger name="*" minLevel="Trace" writeTo="TestWriter,Debugger,XUnit2" />
+      <logger name="*" minLevel="Trace" writeTo="TestWriter,Debugger,NLogCapturing" />
     </rules>
   </nlog>
   <runtime>
