--- a/tests/Log.It.With.NLog.Tests/Log.It.With.NLog.Tests.csproj
+++ b/tests/Log.It.With.NLog.Tests/Log.It.With.NLog.Tests.csproj
@@ -33,8 +33,8 @@
     <Reference Include="FakeItEasy, Version=3.3.2.0, Culture=neutral, PublicKeyToken=eff28e2146d5fd2c, processorArchitecture=MSIL">
       <HintPath>..\..\packages\FakeItEasy.3.3.2\lib\net40\FakeItEasy.dll</HintPath>
     </Reference>
-    <Reference Include="Log.It, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Log.It.1.1.0\lib\netstandard2.0\Log.It.dll</HintPath>
+    <Reference Include="Log.It, Version=1.1.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Log.It.1.1.2\lib\netstandard2.0\Log.It.dll</HintPath>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NLog.4.0.0\lib\net45\NLog.dll</HintPath>
@@ -60,11 +60,11 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Test.It, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Test.It.1.1.0\lib\net462\Test.It.dll</HintPath>
+    <Reference Include="Test.It, Version=2.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Test.It.2.0.3\lib\netstandard2.0\Test.It.dll</HintPath>
     </Reference>
-    <Reference Include="Test.It.With.XUnit, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Test.It.With.XUnit.1.0.1\lib\net462\Test.It.With.XUnit.dll</HintPath>
+    <Reference Include="Test.It.With.XUnit, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Test.It.With.XUnit.2.0.1\lib\netstandard2.0\Test.It.With.XUnit.dll</HintPath>
     </Reference>
     <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <HintPath>..\..\packages\xunit.abstractions.2.0.1\lib\net35\xunit.abstractions.dll</HintPath>
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IWrite.cs" />
+    <Compile Include="OutputRecorder.cs" />
     <Compile Include="When_outputting_logs_to_xunit_using_the_nlog_capturer.cs" />
     <Compile Include="When_rendering_using_the_log_context_layout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
