--- a/tests/Log.It.With.NLog.Tests/packages.config
+++ b/tests/Log.It.With.NLog.Tests/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FakeItEasy" version="3.3.2" targetFramework="net462" />
+  <package id="FluentAssertions" version="5.4.1" targetFramework="net462" />
   <package id="Log.It" version="1.1.2" targetFramework="net462" />
-  <package id="NLog" version="4.0.0" targetFramework="net462" />
+  <package id="NLog" version="4.5.0" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
-  <package id="ShouldFluent" version="1.1.19" targetFramework="net462" />
   <package id="SimpleInjector" version="4.0.7" targetFramework="net462" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
   <package id="Test.It" version="2.1.0" targetFramework="net462" />
   <package id="Test.It.With.XUnit" version="2.2.1" targetFramework="net462" />
   <package id="xunit" version="2.2.0" targetFramework="net462" />
